Container-Root/eks/deployment/inference/generative-ai/stablediffusion/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    meta.helm.sh/release-name: stable-diffusion
    meta.helm.sh/release-namespace: stable-diffusion
  labels:
    app.kubernetes.io/instance: stable-diffusion
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stable-diffusion
    app.kubernetes.io/version: 1.4.0
    helm.sh/chart: stable-diffusion-1.0.6
  name: stable-diffusion
  namespace: stable-diffusion
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: stable-diffusion
      app.kubernetes.io/name: stable-diffusion
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: stable-diffusion
        app.kubernetes.io/name: stable-diffusion
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: stable-diffusion-config
        image: amithkk/stable-diffusion:latest
        imagePullPolicy: IfNotPresent
        name: stable-diffusion-stable-diffusion
        ports:
        - containerPort: 7860
          name: http
          protocol: TCP
        resources: {}
        securityContext: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /models
          name: stable-diffusion-model-store
      dnsPolicy: ClusterFirst
      nodeSelector:
        nvidia.com/gpu.present: "true"
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: stable-diffusion
      serviceAccountName: stable-diffusion
      terminationGracePeriodSeconds: 30
      volumes:
      - name: stable-diffusion-model-store
        persistentVolumeClaim:
          claimName: stable-diffusion-model-store-stable-diffusion-0
